Thu Apr 25 16:37:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * fhandler.cc (fhandler_disk_file::open): Check for allow_ntsec
        when determining exec flag.
        * path.cc (symlink_info::check): Remove call to get_file_attribute().
        * security.cc (read_sd): Rename, ditto for variables to conform
        to common naming convention. Use GetFileSecurity() instead of
        BackupRead() to avoid permission problems when reading ACLs.
        (write_sd): Same renaming as for read_sd().
        (alloc_sd): Change default permissions according to Linux permissions
        for group and world when write permission is set.
        * syscalls.cc (stat_worker): Avoid different permission problems
        when requesting file informations.

Thu Apr 25 10:50:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * net.cc: Avoid a warning in declaration inet_network.

Mon Apr 24 17:38:25 2000  Thorsten Otto <cgf@cygnus.com>

	* fhandler_console.cc (fhandler_console::read): Detect extended keycode
	information for Windows 9x so that function keys will work correctly.

2000-04-24  Vadim Egorov  <egorovv@mailandnews.com>

	* net.cc (cygwin_inet_network): new function.
	* cygwin.din (inet_network): new export

Fri Apr 21 10:37:08 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (normalize_posix_path): Previous two patches were still
	incorrect so rewrite this function to deal with trailing dots.
	(mount_info::conv_to_win32_path): Just check for '/' where appropriate.
	Eliminate nofinalslash call since it is handled in normalize_posix_path
	now.

Thu Apr 20 17:32:42 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (handle_exceptions): Search further for stack info to
	accomodate Windows 95.

Thu Apr 20 16:39:18 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (normalize_posix_path): Previous change failed to take root
	access into account.

Thu Apr 20 11:26:00 2000  Corinna Vinschen <corinna@vinschen.de>
